--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,13 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
-        
-    - name: Install dependencies
+          - name: Install dependencies
       run: npm ci
       
     - name: Build
       run: npm run build
+      env:
+        NODE_ENV: production
       
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
